Refactored code in main() method, deleted null`s where not needed, replaced deprecated method newInstance()